--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 <body>
 
  
-<section class="navbar navbar-expand-lg navbar-dark sidebar bg-primary">
-  <div class="container-fluid flex-lg-column align-items-start">
+<section class="navbar navbar-expand-lg navbar-dark align-items-start sidebar bg-primary pt-lg-5">
+  <div class="container-fluid flex-lg-column  ">
 
     
     <a href="#" class="navbar-brand mx-lg-auto text-center my-lg-4">
-      <img src="./image/pic.jpeg" alt="Profile" class="rounded-circle profile-img">
+      <img src="./image/pic.jpg" alt="Profile" class="rounded-circle profile-img">
       <div class="text-white mt-2 fw-bold d-lg-none">Web Developer</div>
     </a>
 
@@ -36,7 +36,7 @@
       <ul class="navbar-nav flex-lg-column text-lg-start w-100 ">
 
         <li class="nav-item ">
-          <a class="nav-link ps-md-5 ms-md-2" href="home">Home</a>
+          <a class="nav-link ps-md-5 ms-md-2" href="#home">Home</a>
         </li>
 
         <li class="nav-item">
@@ -45,6 +45,12 @@
 
         <li class="nav-item">
           <a class="nav-link ps-md-5 ms-md-2" href="#">Education</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link ps-md-5 ms-md-2" href="#">Skills</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link ps-md-5 ms-md-2" href="#">projects</a>
         </li>
 
         <li class="nav-item">
@@ -64,26 +70,11 @@
 <!-- CONTENT -->
 <div class="main-content ">
  <section id="home">
-  <div class="s2">
-    <img src="./image/Professional portrait in modern office.png" alt="" class="s1" >
-  <div>
+  
     <div class="s3">
       <h1 class="s5">HARISH <span class="s4">LINGAM</span></h1>
-    <h2 class="s6">Fresher Frontend Web Developer </h2>
-    <p class="h5 s7">I build responsive and user-friendly web interfaces using HTML, CSS, Bootstrap, JavaScript and React.</p>
-    <p class="s8">HTML . CSS . BOOTSTRAP . JAVASCRIPT . REACT</p>
-    <div class="social-icons s9">
-  <a href="https://wa.me/91XXXXXXXXXX" target="_blank"><i class="bi bi-whatsapp"></i></a>
-  <a href="https://www.linkedin.com/in/yourusername" target="_blank"><i class="bi bi-linkedin"></i></a>
-  <a href="https://www.instagram.com/yourusername" target="_blank"><i class="bi bi-instagram"></i></a>
-  <a href="https://www.facebook.com/yourusername" target="_blank"><i class="bi bi-facebook"></i></a>
-  <a href="https://github.com/yourusername" target="_blank"><i class="bi bi-github"></i></a>
-  <a href="https://x.com/yourusername" target="_blank">
-  <i class="bi bi-twitter-x"></i>
-</a>
-
-</div>
-
+    <h2 class="s6">Frontend Web Developer </h2>
+    
     </div>
   </div>
   </div>
