--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     
     <a href="#" class="navbar-brand mx-lg-auto text-center my-lg-4">
-      <img src="./image/pic.jpg" alt="Profile" class="rounded-circle profile-img">
+      <img src="./image/pic.jpeg" alt="Profile" class="rounded-circle profile-img">
       <div class="text-white mt-2 fw-bold d-lg-none">Web Developer</div>
     </a>
 
@@ -52,7 +52,7 @@
           <a class="nav-link ps-md-5 ms-md-2" href="#Skills">Skills</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link ps-md-5 ms-md-2" href="#">projects</a>
+          <a class="nav-link ps-md-5 ms-md-2" href="#projects">projects</a>
         </li>
 
         <li class="nav-item">
@@ -121,9 +121,9 @@
 
   </div>
 </section>
-<section id="Skills" class=" w1   py-5">
+<section id="Skills" class=" w1 py-5">
 <h1 class="w2 "> My Skills</h1>
-<div class="row row-cols-1 row-cols-md-3 g-5 py-5 ">
+<div class="row row-cols-1 row-cols-md-3 g-3 g-md-5 pt-2  pt-md-auto py-5 ">
   
   <div class="col">
     <div class="card h-100 ">
@@ -174,7 +174,7 @@
     </div>
   </div>
   <div class="col">
-    <div class="card h-100">
+    <div class="card h-100 ">
       <img src="..." class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
@@ -185,15 +185,16 @@
 
 </div>
 </section>
+<section id="projects">
   <div class="container render py-5">
-    <h2 class="text-center mb-md-4 pb-5 h1 d1">Projects</h2>
+    <h2 class="text-center mb-md-4 pb-md-5 h1 d1">Projects</h2>
 
     <div class="row g-4">
 
       
       <div class="col-md-6">
         <div class="card project-card h-100 p-4">
-          <h4 class="card-title d2">Nokia Laptops Website</h4>
+          <h4 class="card-title d2">Remo Laptops Website</h4>
           <p class="card-text mt-3">
             A static website developed to showcase Nokia laptop products with a clean
             and professional layout. The project focuses on structured HTML and modern
@@ -203,10 +204,10 @@
           <p class="tech mt-2">Technologies: HTML, CSS</p>
 
           <div class="mt-4">
-            <a href="https://your-nokia-project-link.com" target="_blank" class="btn btn-primary me-2">
+            <a href="file:///C:/Users/k/OneDrive/Desktop/laptop/index.html" target="_blank" class="btn btn-primary me-2">
               Live Demo
             </a>
-            <a href="https://github.com/yourusername/nokia-laptops" target="_blank" class="btn btn-outline-primary">
+            <a href=" https://harish16122000-oss.github.io/lingam/" target="_blank" class="btn btn-outline-primary">
               Source Code
             </a>
           </div>
@@ -228,7 +229,7 @@
             <a href="https://your-lingam-bikes-link.com" target="_blank" class="btn btn-primary me-2">
               Live Demo
             </a>
-            <a href="https://github.com/yourusername/lingam-bikes" target="_blank" class="btn btn-outline-primary">
+            <a href=" https://harish16122000-oss.github.io/bootstrap/" target="_blank" class="btn btn-outline-primary">
               Source Code
             </a>
           </div>
@@ -237,7 +238,7 @@
 
     </div>
   </div>
-
+</section>
   
 </div>
 
