--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <h2 class="pt-2">B.A - English</h2>
       <p class="qa">Scott Christian College (Autonomous), Nagercoil</p>
        <p class="q7">2018 - 2021</p>
-      <p class="q8">CPGA - 73.65</p>
+      <p class="q8">CPGA - 7.36</p>
       </div>
 
     </div>
@@ -122,7 +122,7 @@
   </div>
 </section>
 <section id="Skills" class=" w1 py-5">
-<h1 class="w2 "> My Skills</h1>
+<h1 class="w2 mb-md-5 "> My Skills</h1>
 <div class="row row-cols-1 row-cols-md-3 g-3 g-md-5 pt-2  pt-md-auto py-5 ">
   
   <div class="col">
@@ -204,10 +204,10 @@
           <p class="tech mt-2">Technologies: HTML, CSS</p>
 
           <div class="mt-4">
-            <a href="file:///C:/Users/k/OneDrive/Desktop/laptop/index.html" target="_blank" class="btn btn-primary me-2">
+            <a href=" https://harish16122000-oss.github.io/lingam/" target="_blank" class="btn btn-primary me-2">
               Live Demo
             </a>
-            <a href=" https://harish16122000-oss.github.io/lingam/" target="_blank" class="btn btn-outline-primary">
+            <a href="https://github.com/harish16122000-oss/harish-lingam" target="_blank" class="btn btn-outline-primary">
               Source Code
             </a>
           </div>
@@ -226,10 +226,10 @@
           <p class="tech mt-2">Technologies: HTML, CSS, Bootstrap</p>
 
           <div class="mt-4">
-            <a href="https://your-lingam-bikes-link.com" target="_blank" class="btn btn-primary me-2">
+            <a href=" https://harish16122000-oss.github.io/bootstrap/" target="_blank" class="btn btn-primary me-2">
               Live Demo
             </a>
-            <a href=" https://harish16122000-oss.github.io/bootstrap/" target="_blank" class="btn btn-outline-primary">
+            <a href="https://github.com/harish16122000-oss/bootstrap" target="_blank" class="btn btn-outline-primary">
               Source Code
             </a>
           </div>
