--- a/index.html
+++ b/index.html
@@ -239,6 +239,32 @@
     </div>
   </div>
 </section>
+<section id="contact" class=" ">
+  
+  <div class="z1 d-md-flex justify-content-start">
+    <div class="z2">
+      <h1 class="z4 ms-5">Contact Us</h1>
+      <form action="">
+     <input class="ms-5 mt-4 z5" type="text" placeholder="Full Name"><br>
+     <input type="email" class="ms-5 mt-4 z6" placeholder="Email Id"><br>
+     <input type="text" class="ms-5 mt-4 z7" placeholder="Subject"><br>
+    <textarea name="" id="" cols="72" rows="8" class="mt-5 ms-5"></textarea><br>
+    <button type="button" class="ms-5 mt-4 z8">Send</button>
+    </form>
+    
+    </div>
+    <div class="z3 mt-5 "><h3><i class="fa-solid fa-location-dot z9"></i>ADDRESS</h3><p class="z10">2/36, School street, Pottalkulam, Tamilnadu, India</p><h3 ><i class="fa-solid fa-phone z12"></i>PHONE</h3><p class="z11 mt-2 ">8523904929</p>
+      <h3><i class="fa-solid fa-envelope z13"></i>
+MAIL</h3><p>Mail: harish16122000@gamil.com</p>
+<p><i class="fa-brands fa-github "></i><i class="fa-brands fa-linkedin"></i><i class="fa-brands fa-google"></i>
+
+
+
+</p>
+
+    </div>
+  </div>
+</section>
   
 </div>
 
@@ -247,3 +273,4 @@
 
 </body>
 </html>
+ 
