--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
   </div>
 </section>
-<section id="Skills" class=" w1 py-5">
+<section id="Skills" class=" w1 pt-5">
 <h1 class="w2 mb-md-5 "> My Skills</h1>
 <div class="row row-cols-1 row-cols-md-3 g-3 g-md-5 pt-2  pt-md-auto py-5 ">
   
@@ -239,24 +239,24 @@
     </div>
   </div>
 </section>
-<section id="contact" class=" ">
+<section id="contact" class="container  ">
   
-  <div class="z1 d-md-flex justify-content-start">
+  <div class="z1 d-md-flex justify-content-start ">
     <div class="z2">
       <h1 class="z4 ms-5">Contact Us</h1>
       <form action="">
-     <input class="ms-5 mt-4 z5" type="text" placeholder="Full Name"><br>
-     <input type="email" class="ms-5 mt-4 z6" placeholder="Email Id"><br>
-     <input type="text" class="ms-5 mt-4 z7" placeholder="Subject"><br>
-    <textarea name="" id="" cols="72" rows="8" class="mt-5 ms-5"></textarea><br>
-    <button type="button" class="ms-5 mt-4 z8">Send</button>
+     <input class="ms-md-5 mt-4 z5" type="text" placeholder="Full Name"><br>
+     <input type="email" class="ms-md-5 mt-4 z6" placeholder="Email Id"><br>
+     <input type="text" class="ms-md-5 mt-4 z7" placeholder="Subject"><br>
+    <textarea name="" id="" cols="91" rows="8" class="mt-5 ms-md-5 z19"></textarea><br>
+    <button type="button" class="ms-2 ms-md-5 mt-4 z8">Send</button>
     </form>
     
     </div>
-    <div class="z3 mt-5 "><h3><i class="fa-solid fa-location-dot z9"></i>ADDRESS</h3><p class="z10">2/36, School street, Pottalkulam, Tamilnadu, India</p><h3 ><i class="fa-solid fa-phone z12"></i>PHONE</h3><p class="z11 mt-2 ">8523904929</p>
-      <h3><i class="fa-solid fa-envelope z13"></i>
-MAIL</h3><p>Mail: harish16122000@gamil.com</p>
-<p><i class="fa-brands fa-github "></i><i class="fa-brands fa-linkedin"></i><i class="fa-brands fa-google"></i>
+    <div class="z3 mt-5 "><h3><i class="fa-solid fa-location-dot z9"></i>Address</h3><p class="z10">2/36, School street, Pottalkulam, Tamilnadu, India</p><h3 ><i class="fa-solid fa-phone z12"></i>Phone</h3><p class="z11 mt-2 "><a href="tel:+91 852394929"> 8523904929</a></p>
+      <h3><i class="fa-solid fa-envelope z13"></i>Mail</h3><p><a href="mailto:harish16122000@gmail.com" class="z18">Mail: harish16122000@gmail.com</a></p>
+<p class="z17"><a href="https://github.com/harish16122000-oss?tab=repositories" target="_blank"><i class="fa-brands fa-github z14"></i></a><a href="https://www.linkedin.com/in/harish-lingam1612/"  target="_blank"><i class="fa-brands fa-linkedin z15"></i></a></i><a href="tel:+91 8523904929"><i class="fa-brands fa-whatsapp z16"></i></a>
+</a>
 
 
 
