--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+   
 
 
 
@@ -60,7 +61,7 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link ps-md-5 ms-md-2" href="#">Contact</a>
+          <a class="nav-link ps-md-5 ms-md-2" href="#contact">Contact</a>
         </li>
 
       </ul>
@@ -83,7 +84,8 @@
      <div class="a1">
       <p class="h1 a2 mt-5 mt-lg-3">About Me</p>
       <p class="a3 mt-4 mt-lg-5  ">I am <strong> Harish Lingam</strong>, a Frontend Web Developer with hands-on experience in building responsive and user-friendly web applications using HTML5, CSS3, JavaScript (ES6+), Bootstrap, and React.js. I have a strong understanding of UI/UX principles, cross-browser compatibility, responsive design, version control (Git/GitHub), and clean coding practices. I am eager to contribute to scalable frontend solutions while continuously learning modern web technologies.</p>
-      <button type="button" class="mt-lg-5 p-2 a4"><a class="a5" href="">Download CV</a></button>
+      <button type="button" class="mt-lg-5 p-2 a4"><a class="a5" href="">Download CV<i class="fa fa-download ms-2 text-primary"></i>
+</a></button>
       
      </div>
      </section>
@@ -175,7 +177,9 @@
   </div>
   <div class="col">
     <div class="card h-100 ">
-      <img src="..." class="card-img-top" alt="...">
+    <i class="fa-brands fa-redux"></i> 
+
+
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
@@ -239,7 +243,7 @@
     </div>
   </div>
 </section>
-<section id="contact" class="container  ">
+<section id="contact" class="container pb-5 ">
   
   <div class="z1 d-md-flex justify-content-start ">
     <div class="z2">
