--- a/index.html
+++ b/index.html
@@ -84,9 +84,10 @@
      <div class="a1">
       <p class="h1 a2 mt-5 mt-lg-3">About Me</p>
       <p class="a3 mt-4 mt-lg-5  ">I am <strong> Harish Lingam</strong>, a Frontend Web Developer with hands-on experience in building responsive and user-friendly web applications using HTML5, CSS3, JavaScript (ES6+), Bootstrap, and React.js. I have a strong understanding of UI/UX principles, cross-browser compatibility, responsive design, version control (Git/GitHub), and clean coding practices. I am eager to contribute to scalable frontend solutions while continuously learning modern web technologies.</p>
-      <button type="button" class="mt-lg-5 p-2 a4"><a class="a5" href="">Download CV<i class="fa fa-download ms-2 text-primary"></i>
+      <button type="button" class="mt-lg-5 p-2 a4"><a class="a5" href="./Harish Lingam.pdf" download>Download CV<i class="fa fa-download ms-2 text-primary"></i>
 </a></button>
       
+ 
      </div>
      </section>
        
